test/subjects/errors/constant_folding9.php
<?php
var_dump (~ false); // { phc-warning: Unsupported operand types }
?>
